[package]
name = "multiplayer-tetris"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
bevy = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
iyes_loopless = "0.9.1"
rand = "0.8.5"
lazy_static = "1.4.0"
bevy_editor_pls = "0.2.0"
local-ip-address = "0.4.9"

[profile.dev.package."*"]
opt-level = 3
